WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52419
REGRESSION (
r71884
): Cross-origin XHR fails if willSendRequest changes the URL
https://bugs.webkit.org/show_bug.cgi?id=52419
Summary
REGRESSION (r71884): Cross-origin XHR fails if willSendRequest changes the URL
mitz
Reported
2011-01-13 18:19:51 PST
REGRESSION (
r71884
): Cross-origin XHR fails if willSendRequest changes the URL
Attachments
Patch
(10.83 KB, patch)
2011-01-13 18:30 PST
,
mitz
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-01-13 18:20:52 PST
<
rdar://problem/8827065
>
mitz
Comment 2
2011-01-13 18:30:40 PST
Created
attachment 78882
[details]
Patch
Alexey Proskuryakov
Comment 3
2011-01-13 18:56:34 PST
Comment on
attachment 78882
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=78882&action=review
Looks great.
> Tools/ChangeLog:8 > + Allow to furthur control the behavior of the willSendRequest delegate callback by making it
furthur?
> LayoutTests/http/tests/loading/cross-origin-XHR-willLoadRequest-expected.txt:5 > +CONSOLE MESSAGE: line 1: XMLHttpRequest cannot load
http://localhost:8000/loading/resources/foo.txt
. Origin
http://127.0.0.1:8000
is not allowed by Access-Control-Allow-Origin.
Please make this test explain what the expected behavior is. Does it somehow pass on other platforms, or does it need to be added to Skipped lists?
mitz
Comment 4
2011-01-13 19:37:51 PST
(In reply to
comment #3
)
> (From update of
attachment 78882
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=78882&action=review
> > Looks great. > > > Tools/ChangeLog:8 > > + Allow to furthur control the behavior of the willSendRequest delegate callback by making it > > furthur?
Something wrong with my spulling?
> > > LayoutTests/http/tests/loading/cross-origin-XHR-willLoadRequest-expected.txt:5 > > +CONSOLE MESSAGE: line 1: XMLHttpRequest cannot load
http://localhost:8000/loading/resources/foo.txt
. Origin
http://127.0.0.1:8000
is not allowed by Access-Control-Allow-Origin. > > Please make this test explain what the expected behavior is.
OK.
> Does it somehow pass on other platforms, or does it need to be added to Skipped lists?
I don't see how It can pass on other platforms. I suppose the EWS does not run new tests. I will skip. Thanks for the review!
mitz
Comment 5
2011-01-13 21:20:41 PST
Fixed in <
http://trac.webkit.org/changeset/75768
>.
WebKit Review Bot
Comment 6
2011-01-13 22:35:28 PST
http://trac.webkit.org/changeset/75768
might have broken Qt Linux Release
Hayato Ito
Comment 7
2011-01-13 23:04:18 PST
I've fixed Skipped lists in
r75768
:
https://trac.webkit.org/changeset/75771
It seems they don't have '.html' suffix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug