third_party/WebKit/Source/WebCore/loader/ResourceLoader.cpp
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2006, 2007 Apple Inc. All rights reserved.
+ * Copyright (C) 2006, 2007, 2010, 2011 Apple Inc. All rights reserved.
  *           (C) 2007 Graham Dennis (graham.dennis@gmail.com)
  *
  * Redistribution and use in source and binary forms, with or without
@@ -130,14 +130,13 @@ bool ResourceLoader::init(const ResourceRequest& r)
             clientRequest.setFirstPartyForCookies(document->firstPartyForCookies());
     }
 
-    m_request = clientRequest;
-
-    willSendRequest(m_request, ResourceResponse());
-    if (m_request.isNull()) {
+    willSendRequest(clientRequest, ResourceResponse());
+    if (clientRequest.isNull()) {
         didFail(frameLoader()->cancelledError(m_request));
         return false;
     }
 
+    m_request = clientRequest;
     return true;
 }
 
