third_party/WebKit/Tools/DumpRenderTree/LayoutTestController.h
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <JavaScriptCore/JSObjectRef.h>
 #include <JavaScriptCore/JSRetainPtr.h>
+#include <map>
 #include <set>
 #include <string>
 #include <vector>
@@ -46,6 +47,8 @@ public:
     void makeWindowObject(JSContextRef context, JSObjectRef windowObject, JSValueRef* exception);
 
     void addDisallowedURL(JSStringRef url);
+    void addURLToRedirect(std::string origin, std::string destination);
+    const std::string& redirectionDestinationForURL(std::string);
     void clearAllApplicationCaches();
     void clearAllDatabases();
     void clearBackForwardList();
@@ -362,6 +365,8 @@ private:
     
     // origins which have been granted desktop notification access
     std::vector<JSStringRef> m_desktopNotificationAllowedOrigins;
+
+    std::map<std::string, std::string> m_URLsToRedirect;
     
     static JSClassRef getJSClass();
     static JSStaticValue* staticValues();
