third_party/WebKit/Tools/DumpRenderTree/mac/ResourceLoadDelegate.mm
@@ -1,6 +1,6 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
- * Copyright (C) 2007, Apple Inc.  All rights reserved.
+ * Copyright (C) 2007, 2011 Apple Inc.  All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -166,6 +166,9 @@ using namespace std;
         [newRequest setValue:nil forHTTPHeaderField:nsHeader];
         [nsHeader release];
     }
+    const std::string& destination = gLayoutTestController->redirectionDestinationForURL([[url absoluteString] UTF8String]);
+    if (destination.length())
+        [newRequest setURL:[NSURL URLWithString:[NSString stringWithUTF8String:destination.data()]]];
 
     return [newRequest autorelease];
 }
